configuration pitest